--- a/css/title.css
+++ b/css/title.css
@@ -1,52 +1,31 @@
-
-h1{
-    margin: 100px 0;
-    color: rgb(255, 0, 0);
-    text-shadow: 3px 3px 3px black;
-    font-size: 40px;
+@font-face{
     font-family: "myFont";
+    src:url("../fonts/AkazukinPOP.otf") format("opentype")
+}
+body{
+    background-color: rgb(156, 255, 255);
 }
 .center{
-    text-align:center;
+    display: flex;
+    justify-content: center;
 }
-p{
-    background-color: rgb(253, 143, 143);
-    width: 500px;
-    height: 60px;
-    line-height: 60px;
-    margin:20px  auto;
-    border-radius: 30px;
-    font-size: 40px;
-    font-weight:600;
-    display: none;
-}
-#error{
-    display: none;
+.title{
+    margin-top: 100px;
+    color: rgb(47, 102, 221);
+    text-shadow: 5px 5px 5px black;
+    font-size: 120px;
+    font-family: "myFont";
 }
 .button{
-    background-color: rgb(253, 143, 143);
+    background-color: rgb(128, 128, 226);
+    width: 150px;
+    height: 70px;
     border-radius: 15px;
     border: 0px;
-    font-size:40px;
-    font-weight:600;
+    font-size:30px;
+    font-weight: 600;
+    margin:30px 0;
 }
 .button:active{
-    background-color: red;
-}
-input{
-    border-radius: 20px; 
-    padding:10px 15px;
-    font-size: 30px;
-    font-weight: 600;
-    height: 46px;
-}
-#in-button{
-    width: 140px;
-    height: 70px;
-    margin-left: 20px;
-}
-#ok-button,#start-button{
-    width: 180px;
-    height: 80px;
-    margin: 30px;
+    background-color: blue;
 }
