--- a/css/game.css
+++ b/css/game.css
@@ -1,3 +1,20 @@
+.center{
+    display: flex;
+    justify-content: center;
+}
+.text-center{
+    text-align:center;
+}
+.user-box{
+    display:flex;
+}
+.user-frame{
+    border:solid black 1px;
+    width: 20%;
+}
+#user-frame2{
+    margin:0 0 0 auto;
+}
 .hide{
     display: none;
 }
