--- a/css/taiki.css
+++ b/css/taiki.css
@@ -10,9 +10,9 @@ h1{
     display: flex;
     justify-content: center;
 }
-/* .center{
+.text-center{
     text-align:center;
-} */
+}
 .name-box{
     display: flex;
     margin: 20px auto;
@@ -49,7 +49,6 @@ p{
     background-color: red;
 }
 input{
-    text-align:center;
     border-radius: 20px; 
     padding:10px 15px;
     font-size: 30px;
