--- a/css/result.css
+++ b/css/result.css
@@ -13,7 +13,7 @@ body{
     color: cadetblue;
     text-shadow: 2px 2px 4px white;
     font-size: 50px;
-    margin:10px 0 0 600px;
+    margin:10px 0 0 645px;
 }
 .box {
     margin: left;
@@ -46,6 +46,131 @@ p{
     color: pink;
     font-weight: 700;
 }
+.rank4 {
+    color: #66FFFF;
+    font-weight: 1000;
+}
+
+.rank3 {
+    color: #33CC66;
+    font-weight: 700;
+}
+
+
+.btn1-flat-vertical-border {
+    position: relative;
+    display: inline-block;
+    font-weight: bold;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    border-left: solid 4px #FF55FF;
+    border-right: solid 4px #FF55FF;
+    color: #FF55FF;
+    background: #e1f3ff;
+    transition: .4s;
+    width: 100px;
+    text-align: center;
+    margin: 0 0 0 110px;
+}
+
+.btn1-flat-vertical-border:hover {
+    background: #FF55FF;
+    color: #FFF;
+}
+
+.btn2-flat-vertical-border {
+    position: relative;
+    display: inline-block;
+    font-weight: bold;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    border-left: solid 4px #FF55FF;
+    border-right: solid 4px #FF55FF;
+    color: #FF55FF;
+    background: #e1f3ff;
+    transition: .4s;
+    width: 100px;
+    text-align: center;
+    margin: 0 0 0 0;
+}
+
+.btn2-flat-vertical-border:hover {
+    background: #FF55FF;
+    color: #FFF;
+}
+
+.btn3-flat-vertical-border {
+    position: relative;
+    display: inline-block;
+    font-weight: bold;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    border-left: solid 4px #FF55FF;
+    border-right: solid 4px #FF55FF;
+    color: #FF55FF;
+    background: #e1f3ff;
+    transition: .4s;
+    width: 100px;
+    text-align: center;
+    margin: 0 0 0 0;
+}
+
+.btn3-flat-vertical-border:hover {
+    background: #FF55FF;
+    color: #FFF;
+}
+
+.btn4-flat-vertical-border {
+    position: relative;
+    display: inline-block;
+    font-weight: bold;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    border-left: solid 4px #FF55FF;
+    border-right: solid 4px #FF55FF;
+    color: #FF55FF;
+    background: #e1f3ff;
+    transition: .4s;
+    width: 100px;
+    text-align: center;
+    margin:0 110px 0 0 ; 
+}
+
+.btn4-flat-vertical-border:hover {
+    background: #FF55FF;
+    color: #FFF;
+}
+
+.hidden {
+    display: none;
+}
+
+#mask {
+    background: rgba(0, 0, 0, 0.7);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    z-index: 1;
+}
+
+#modal {
+    background: #fff;
+    width: 50%;
+    padding: 24px;
+    border-radius: 4px;
+    color: red;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    margin: 0 auto;
+    z-index: 2;
+}
+
+
 section {
     height: 100vh;
 }
